--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/themes": "^3.2.1",
     "classname": "^0.0.0",
     "classnames": "^2.5.1",
     "next": "15.1.6",
