--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@radix-ui/themes": "^3.2.1",
+    "axios": "^1.9.0",
     "classname": "^0.0.0",
     "classnames": "^2.5.1",
     "easymde": "^2.20.0",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.2",
     "react-icons": "^5.5.0",
     "react-simplemde-editor": "^5.2.0"
   },
