--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "axios": "^1.9.0",
     "classname": "^0.0.0",
     "classnames": "^2.5.1",
+    "delay": "^6.0.0",
     "easymde": "^2.20.0",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.2",
     "react-icons": "^5.5.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-simplemde-editor": "^5.2.0"
   },
   "devDependencies": {
