--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "react-hook-form": "^7.56.2",
     "react-icons": "^5.5.0",
     "react-loading-skeleton": "^3.5.0",
+    "react-markdown": "^10.1.0",
     "react-simplemde-editor": "^5.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20",
     "@types/react": "19.1.9",
     "@types/react-dom": "^19",
